added image to index page, began creating about page

--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
             </nav>
         </div>
     </header>
+    
+    <div class="image">
+        <image src="https://images.unsplash.com/photo-1508020963102-c6c723be5764?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"></image>
+    </div>
+
     <div class="container">
-   
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
