--- a/about.html
+++ b/about.html
@@ -7,12 +7,16 @@
   <title>Sprint Challenge - About</title>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
-  <link rel="stylesheet" href="style/index.css">
+  <link rel="stylesheet" href="style/about.css">
 
 </head>
 
 <body>
+    <header>
     <h1>About</h1>
+    </header>
+
+
 </body>
 
 
