fixed images using image files

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <header>
         <div class="navbar">
-            <nav>
-                <div class="logo">
-                <img src="https://images.unsplash.com/photo-1526649661456-89c7ed4d00b8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60">
-                </div>
+            <div class="logo">
+                <img src="assets/lambda-black.png">
+            </div>
+            <nav class="nav">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="">Products</a>
@@ -26,9 +26,9 @@
             </nav>
         </div>
     </header>
-    
+
     <div class="image">
-        <image src="https://images.unsplash.com/photo-1508020963102-c6c723be5764?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"></image>
+        <img src="assets/jumbo.jpg">
     </div>
 
     <div class="container">
@@ -80,7 +80,7 @@
         </section>
         
         <footer>
-            <nav>
+            <nav class="nav">
                 <a href="#">Home</a>
                 <a href="#">About</a>
                 <a href="#">Products</a>
